fix: prevent progress percentage overflow